@startuml
class Partido {
- Date fecha
- Equipo local
- Equipo visitante
- Resultado resultado
+ <<Create>> Partido(Date,Equipo,Equipo)
+ Date getFecha()
+ void setFecha(Date)
+ Equipo getLocal()
+ void setLocal(Equipo)
+ Equipo getVisitante()
+ void setVisitante(Equipo)
+ Resultado getResultado()
+ void setResultado(Resultado)
+ String toString()
}
class Grupo {
- ArrayList<Equipo> EquiposQueAvanzan
+ <<Create>> Grupo(String,ArrayList<Partido>,ArrayList<Equipo>,ArrayList<Equipo>)
+ ArrayList<Equipo> getEquiposQueAvanzan()
+ String toString()
}
class EtapaMundial {
- String descripcionEtapa
- ArrayList<Partido> partidos
- ArrayList<Equipo> EquiposQueAvanzan
+ <<Create>> EtapaMundial(String,ArrayList<Partido>,ArrayList<Equipo>)
+ String getDescripcionEtapa()
+ void setDescripcionEtapa(String)
+ ArrayList<Partido> getPartidos()
+ void setPartidos(ArrayList<Partido>)
+ ArrayList<Equipo> getEquiposQueAvanzan()
+ void setEquiposQueAvanzan(ArrayList<Equipo>)
+ String toString()
+ void addPartido(Partido)
+ void addEquiposQueAvanzan(Equipo)
+ ArrayList<Equipo> EquiposQueAvanzan()
}
class Equipo {
- String nombre
- ArrayList<Partido> partidosJugados
- int partidosGanadosporGrupo
+ <<Create>> Equipo(String)
+ <<Create>> Equipo(String,ArrayList<Partido>)
+ String getNombre()
+ void setNombre(String)
+ void ganaPartido()
+ void empataPartido()
+ void addPartidoJugado(Partido)
+ void setPartidosJugados(ArrayList<Partido>)
+ int getPuntajePartidoEtapaGrupo()
}
class Main {
+ {static} void main(String[])
}
class Llave {
- ArrayList<Equipo> EquiposQueAvanzan
+ <<Create>> Llave(String,ArrayList<Partido>,ArrayList<Equipo>,ArrayList<Equipo>)
+ String toString()
}
class Resultado {
- int golesLocal
- int golesVisitante
+ <<Create>> Resultado(int,int)
+ boolean ganoLocal()
+ boolean ganoVisitante()
+ boolean empate()
+ int getGolesLocal()
+ void setGolesLocal(int)
+ int getGolesVisitante()
+ void setGolesVisitante(int)
}


EtapaMundial <|-- Grupo
EtapaMundial <|-- Llave
@enduml